# L2Gv2

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  anomaly_detection.py  asad.ipynb  dataloader.py  embedding.ipynb  manopt_optimization.py  models.py  nas.ipynb  nas_UPDATE.ipynb  noxfile.py  pyproject.toml  requirements.in  requirements.txt  requirements_linux_cp311_x86_64.txt  requirements_macos.txt  setup.py  summary.ipynb
.github/workflows/: lint.yml  pylint.yml  ruff.yml  tests.yml
datasets/: _base.py
datasets/data/nas/: country_codes.parquet
datasets/data/nas/.ipynb_checkpoints/: country_codes-checkpoint.csv
docs/: _config.yml  _toc.yml  demo.ipynb  development.md  index.md  requirements.txt
docs/reference/: l2gv2.align.geo.rst  l2gv2.align.rst  l2gv2.datasets.rst  l2gv2.embedding.gae.utils.rst  l2gv2.embedding.rst  l2gv2.graphs.rst  l2gv2.patch.rst  l2gv2.rst  modules.rst
docs/source/: code.rst  conf.py  index.rst  intro.rst
docs/source/reference/: l2gv2.datasets.rst  l2gv2.embedding.dgi.layers.rst  l2gv2.embedding.dgi.models.rst  l2gv2.embedding.dgi.rst  l2gv2.embedding.dgi.utils.rst  l2gv2.embedding.gae.layers.rst  l2gv2.embedding.gae.models.rst  l2gv2.embedding.gae.rst  l2gv2.embedding.rst  l2gv2.network.rst  l2gv2.patch.rst  l2gv2.rst
examples/: alignment.ipynb  clustering.ipynb  demo.ipynb  l2gv2.ipynb  nas.ipynb
l2gv2/: anomaly_detection.py  clustering.py  example.py  induced_subgraph.py  manopt_optimization.py  models.py  progress.py  sparsify.py  utils.py
l2gv2/align/: __init__.py  alignment.py  utils.py
l2gv2/align/geo/: __init__.py  geoalign.py  model.py  train.py
l2gv2/align/l2g/: local2global.py
l2gv2/datasets/: __init__.py  _base.py  as733.py  base.py  cora.py  dgraph.py  raphtory.py  registry.py  utils.py
l2gv2/embedding/: __init__.py  embedding.py  embeddings.py  eval.py  svd.py  train.py  utils.py
l2gv2/embedding/dgi/: __init__.py  execute.py
l2gv2/embedding/dgi/layers/: __init__.py  discriminator.py  gcn.py  readout.py
l2gv2/embedding/dgi/models/: __init__.py  dgi.py  logreg.py
l2gv2/embedding/dgi/utils/: __init__.py  loss.py
l2gv2/embedding/gae/: __init__.py
l2gv2/embedding/gae/layers/: GAEconv.py  VGAEconv.py  decoders.py
l2gv2/embedding/gae/models/: __init__.py  gae.py  vgae.py
l2gv2/embedding/gae/utils/: loss.py  mixins.py
l2gv2/embedding/svd/: svd.py
l2gv2/graphs/: __init__.py  graph.py  npgraph.py  tgraph.py  utils.py
l2gv2/network/: __init__.py  graph.py  npgraph.py  tgraph.py  utils.py
l2gv2/patch/: __init__.py  clustering.py  lazy.py  patch.py  patches.py  sparsify.py  utils.py
l2gv2/utils/: __init__.py
notebooks/: asad.ipynb  nas.ipynb  nas_UPDATE.ipynb  summary.ipynb
patch/: patch.py
tests/: conftest.py  example.py  test_datasets.py  test_local2global.py
tests/graphs/: test_graph.py  test_tgraph.py
tests/patch/: test_sparsify.py
