[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


# project
# #######
[project]
name = "l2gv2"
version = "0.0.1"
authors = [
  { name="Martin Lotz", email="martin.lotz@warwick.ac.uk" }
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lotzma/L2Gv2"
"Bug Tracker" = "https://github.com/lotzma/L2Gv2/issues"

# pylint
# ######
[tool.pylint.'MASTER']
ignore = ["docs/*"]

[tool.pylint.'MESSAGES CONTROL']
notes = "TODO"
disable = [
    "fixme",
    "import-error",
    "duplicate-code",
    "too-many-locals",
    "too-many-arguments",
    "E1121"
]

# pyright
# #######
[tool.pyright]
include = ["l2gv2"]
exclude = []
ignore = []
defineConstant = { DEBUG = true }

reportMissingImports = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
