[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


# project
# #######
[project]
name = "l2gv2"
version = "0.1.0"
authors = [
  { name="Martin Lotz", email="martin.lotz@warwick.ac.uk" }
]
description = "Infer global embeddings from local graph embeddings trained in parallel"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

dependencies = [
    "autograd ~= 1.7",
    "ilupp == 1.0.*",
    "networkx ~= 3.4",
    "numba >= 0.60",
    "numpy == 1.*",
    "polars ~= 1.15",
    "pymanopt ~= 2.2",
    "pymetis",
    "python-louvain == 0.16",  # imported as 'community'
    "raphtory >= 0.13",
    "scikit-learn >= 1",
    "scipy == 1.*",
    "torch == 2.4.*; sys_platform == 'linux'",
    "torch == 2.5.*; sys_platform == 'darwin'",
    "torch-geometric ~= 2.6",
    "torch-scatter ~= 2.1",
    "tqdm >= 4"
]

[project.optional-dependencies]
dev = [
    "pylint == 3.3.1",
    "pre_commit == 4.0.1"
]
tests = [
    "pytest >= 8",
    "pytest-cov",
    "pylint"
]
docs = [
    "Sphinx == 8.*",
    "sphinx-markdown-builder==0.6.*",
    "myst-parser >= 4",
    "pydata-sphinx-theme"
]

[project.urls]
"Homepage" = "https://github.com/OxfordRSE/L2Gv2"
"Bug Tracker" = "https://github.com/OxfordRSE/L2Gv2/issues"

# pylint
# ######
[tool.pylint.'MASTER']
ignore = ["docs/*"]

[tool.pylint.'MESSAGES CONTROL']
notes = "TODO"
disable = [
    "fixme",
    "import-error",
    "duplicate-code",
    "too-many-locals",
    "too-many-arguments",
    "too-many-positional-arguments"
]

# pyright
# #######
[tool.pyright]
include = ["l2gv2"]
exclude = []
ignore = []
defineConstant = { DEBUG = true }

reportMissingImports = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
