[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = [
  "l2gv2",
  "l2gv2.datasets",
  "l2gv2.embedding",
  "l2gv2.utils",
  "l2gv2.patch",
  "l2gv2.graphs",
  "l2gv2.embedding",
  "l2gv2.embedding.svd",
  "l2gv2.embedding.gae",
]

[project]
name = "l2gv2"
version = "0.1.0"
authors = [
  { name="Martin Lotz", email="martin.lotz@warwick.ac.uk" }
]
description = "Infer global embeddings from local graph embeddings trained in parallel"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

dependencies = [
    "autograd ~= 1.7",
    "ilupp == 1.0.*",
    "networkx>=3",
    "numba",
    "numpy",
    "polars",
    "pymanopt ~= 2.2",
    "pymetis",
    "python-louvain == 0.16",  # imported as 'community'
    "raphtory",
    "scikit-learn",
    "scipy",
    "torch>=2.5",
    "torch-geometric>=2.6",
    "tqdm >= 4"
]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "pytest-cov",
    "pytest-xdist",
    "pylint",
    "pre_commit == 4.0.1"
]
docs = [
    "Sphinx == 8.*",
    "sphinx-markdown-builder==0.6.*",
    "myst-parser >= 4",
    "pydata-sphinx-theme"
]

[project.urls]
"Homepage" = "https://github.com/OxfordRSE/L2Gv2"
"Bug Tracker" = "https://github.com/OxfordRSE/L2Gv2/issues"

# pylint
# ######
[tool.pylint.'MASTER']
ignore = ["docs/*"]

[tool.pylint.'MESSAGES CONTROL']
notes = "TODO"
disable = [
    "fixme",
    "import-error",
    "duplicate-code",
]

# pyright
# #######
[tool.pyright]
include = ["l2gv2"]
exclude = []
ignore = []
defineConstant = { DEBUG = true }

reportMissingImports = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportGeneralTypeIssues = false
reportMissingTypeStubs = false

[tool.coverage.run]
omit = ["tests/*"]
